Editor/src/hu/racz/zalan/editor/antlr/generated/GLSLParser.java
// Generated from GLSL.g4 by ANTLR 4.7.1
package hu.racz.zalan.editor.antlr.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GLSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PD_ERROR=1, PD_PRAGMA=2, PDA_PRAGMA_DEBUG=3, PDA_PRAGMA_OPTIMIZE=4, PDA_PRAGMA_STDGL=5, 
		PDA_PRAGMA_TOGGLE=6, PD_VERSION=7, PDA_VERSION_PROFILE=8, PD_LINE=9, PD_EXTENSION=10, 
		PDA_EXTENSION_ALL_BEHAVIOUR=11, PDA_EXTENSION_BEHAVIOUR=12, PDA_EXTENSION_ALL=13, 
		KW_BREAK=14, KW_CONTINUE=15, KW_DO=16, KW_FOR=17, KW_WHILE=18, KW_SWITCH=19, 
		KW_CASE=20, KW_DEFAULT=21, KW_IF=22, KW_ELSE=23, KW_DISCARD=24, KW_RETURN=25, 
		KW_STRUCT=26, KW_VOID=27, RESERVED_KEYWORD=28, Q_PRECISION=29, Q_LAYOUT=30, 
		Q_PRECISE=31, Q_INVARIANT=32, Q_SUBROUTINE=33, Q_SMOOTH=34, Q_FLAT=35, 
		Q_NONPERSPECTIVE=36, Q_CONST=37, Q_INOUT=38, Q_IN=39, Q_OUT=40, Q_CENTROID=41, 
		Q_PATCH=42, Q_SAMPLE=43, Q_UNIFORM=44, Q_BUFFER=45, Q_VARYING=46, Q_ATTRIBUTE=47, 
		Q_COHERENT=48, Q_VOLATILE=49, Q_RESTRICT=50, Q_READONLY=51, Q_WRIREONLY=52, 
		Q_SHARED=53, Q_HIGHP=54, Q_MEDIUMP=55, Q_LOWP=56, QP_LAYOUT=57, QPV_LAYOUT=58, 
		TYPE=59, BI_FUNCTION=60, BI_MACRO=61, BI_VARIABLE=62, BOOL_LITERAL=63, 
		INT_LITERAL=64, FLOAT_LITERAL=65, OP_MUL=66, OP_ADD=67, OP_SUB=68, OP_DIV=69, 
		OP_MOD=70, OP_INC=71, OP_DEC=72, OP_SHIFT=73, OP_RELATIONAL=74, OP_BIT=75, 
		OP_BIT_UNARY=76, OP_LOGICAL=77, OP_LOGICAL_UNARY=78, OP_MODIFY=79, OP_ASSIGN=80, 
		MULTI_LINE_COMMENT=81, ONE_LINE_MULTI_LINE_COMMENT=82, SINGLE_LINE_COMMENT=83, 
		NEW_LINE=84, SPACE=85, TAB=86, IDENTIFIER=87, DOT=88, COMMA=89, COLON=90, 
		SEMICOLON=91, QUESTION=92, LRB=93, RRB=94, LCB=95, RCB=96, LSB=97, RSB=98;
	public static final int
		RULE_start = 0, RULE_macro = 1, RULE_m_version = 2, RULE_m_line = 3, RULE_m_pragma = 4, 
		RULE_m_extension = 5, RULE_m_error = 6, RULE_function_signature = 7, RULE_return_type = 8, 
		RULE_function_subroutine_qualifier = 9, RULE_function_parameter_list = 10, 
		RULE_function_parameter = 11, RULE_parameter_qualifier = 12, RULE_function_prototype = 13, 
		RULE_function_definition = 14, RULE_function_call = 15, RULE_function_call_parameter_list = 16, 
		RULE_statement_list = 17, RULE_statement = 18, RULE_compound_statement = 19, 
		RULE_simple_statement = 20, RULE_selection_statement = 21, RULE_switch_statement = 22, 
		RULE_case_group = 23, RULE_case_label = 24, RULE_case_statement_list = 25, 
		RULE_iteration_statement = 26, RULE_for_iteration = 27, RULE_while_iteration = 28, 
		RULE_do_while_iteration = 29, RULE_jump_statement = 30, RULE_expression_statement = 31, 
		RULE_declaration_statement = 32, RULE_init_declaration_list = 33, RULE_single_declaration = 34, 
		RULE_struct_declaration_list = 35, RULE_struct_declaration = 36, RULE_struct_declarator_list = 37, 
		RULE_struct_declarator = 38, RULE_struct_specifier = 39, RULE_expression = 40, 
		RULE_constant_expression = 41, RULE_fully_specified_type = 42, RULE_fully_specified_struct = 43, 
		RULE_type = 44, RULE_type_qualifier = 45, RULE_type_name_list = 46, RULE_storage_qualifier = 47, 
		RULE_auxiliary_storage_qualifier = 48, RULE_memory_storage_qualifier = 49, 
		RULE_layout_qualifier = 50, RULE_layout_qualifier_id_list = 51, RULE_layout_qualifier_id = 52, 
		RULE_precision_qualifier = 53, RULE_interpolation_qualifier = 54, RULE_literal = 55, 
		RULE_bool_literal = 56, RULE_number_literal = 57, RULE_array_usage = 58, 
		RULE_array_declaration = 59;
	public static final String[] ruleNames = {
		"start", "macro", "m_version", "m_line", "m_pragma", "m_extension", "m_error", 
		"function_signature", "return_type", "function_subroutine_qualifier", 
		"function_parameter_list", "function_parameter", "parameter_qualifier", 
		"function_prototype", "function_definition", "function_call", "function_call_parameter_list", 
		"statement_list", "statement", "compound_statement", "simple_statement", 
		"selection_statement", "switch_statement", "case_group", "case_label", 
		"case_statement_list", "iteration_statement", "for_iteration", "while_iteration", 
		"do_while_iteration", "jump_statement", "expression_statement", "declaration_statement", 
		"init_declaration_list", "single_declaration", "struct_declaration_list", 
		"struct_declaration", "struct_declarator_list", "struct_declarator", "struct_specifier", 
		"expression", "constant_expression", "fully_specified_type", "fully_specified_struct", 
		"type", "type_qualifier", "type_name_list", "storage_qualifier", "auxiliary_storage_qualifier", 
		"memory_storage_qualifier", "layout_qualifier", "layout_qualifier_id_list", 
		"layout_qualifier_id", "precision_qualifier", "interpolation_qualifier", 
		"literal", "bool_literal", "number_literal", "array_usage", "array_declaration"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'#error'", "'#pragma'", "'debug'", "'optimize'", "'STDGL'", null, 
		"'#version'", null, "'#line'", "'#extension'", null, null, "'all'", "'break'", 
		"'continue'", "'do'", "'for'", "'while'", "'switch'", "'case'", "'default'", 
		"'if'", "'else'", "'discard'", "'return'", "'struct'", "'void'", null, 
		"'precision'", "'layout'", "'precise'", "'invariant'", "'subroutine'", 
		"'smooth'", "'flat'", "'noperspective'", "'const'", "'inout'", "'in'", 
		"'out'", "'centroid'", "'patch'", "'sample'", "'uniform'", "'buffer'", 
		"'varying'", "'attribute'", "'coherent'", "'volatile'", "'restrict'", 
		"'readonly'", "'writeonly'", "'shared'", "'highp'", "'mediump'", "'lowp'", 
		null, null, null, null, null, null, null, null, null, "'*'", "'+'", "'-'", 
		"'/'", "'%'", "'++'", "'--'", null, null, null, "'~'", null, "'!'", null, 
		"'='", null, null, null, null, "' '", "'\t'", null, "'.'", "','", "':'", 
		"';'", "'?'", "'('", "')'", "'{'", "'}'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PD_ERROR", "PD_PRAGMA", "PDA_PRAGMA_DEBUG", "PDA_PRAGMA_OPTIMIZE", 
		"PDA_PRAGMA_STDGL", "PDA_PRAGMA_TOGGLE", "PD_VERSION", "PDA_VERSION_PROFILE", 
		"PD_LINE", "PD_EXTENSION", "PDA_EXTENSION_ALL_BEHAVIOUR", "PDA_EXTENSION_BEHAVIOUR", 
		"PDA_EXTENSION_ALL", "KW_BREAK", "KW_CONTINUE", "KW_DO", "KW_FOR", "KW_WHILE", 
		"KW_SWITCH", "KW_CASE", "KW_DEFAULT", "KW_IF", "KW_ELSE", "KW_DISCARD", 
		"KW_RETURN", "KW_STRUCT", "KW_VOID", "RESERVED_KEYWORD", "Q_PRECISION", 
		"Q_LAYOUT", "Q_PRECISE", "Q_INVARIANT", "Q_SUBROUTINE", "Q_SMOOTH", "Q_FLAT", 
		"Q_NONPERSPECTIVE", "Q_CONST", "Q_INOUT", "Q_IN", "Q_OUT", "Q_CENTROID", 
		"Q_PATCH", "Q_SAMPLE", "Q_UNIFORM", "Q_BUFFER", "Q_VARYING", "Q_ATTRIBUTE", 
		"Q_COHERENT", "Q_VOLATILE", "Q_RESTRICT", "Q_READONLY", "Q_WRIREONLY", 
		"Q_SHARED", "Q_HIGHP", "Q_MEDIUMP", "Q_LOWP", "QP_LAYOUT", "QPV_LAYOUT", 
		"TYPE", "BI_FUNCTION", "BI_MACRO", "BI_VARIABLE", "BOOL_LITERAL", "INT_LITERAL", 
		"FLOAT_LITERAL", "OP_MUL", "OP_ADD", "OP_SUB", "OP_DIV", "OP_MOD", "OP_INC", 
		"OP_DEC", "OP_SHIFT", "OP_RELATIONAL", "OP_BIT", "OP_BIT_UNARY", "OP_LOGICAL", 
		"OP_LOGICAL_UNARY", "OP_MODIFY", "OP_ASSIGN", "MULTI_LINE_COMMENT", "ONE_LINE_MULTI_LINE_COMMENT", 
		"SINGLE_LINE_COMMENT", "NEW_LINE", "SPACE", "TAB", "IDENTIFIER", "DOT", 
		"COMMA", "COLON", "SEMICOLON", "QUESTION", "LRB", "RRB", "LCB", "RCB", 
		"LSB", "RSB"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GLSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GLSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public List<MacroContext> macro() {
			return getRuleContexts(MacroContext.class);
		}
		public MacroContext macro(int i) {
			return getRuleContext(MacroContext.class,i);
		}
		public List<Function_prototypeContext> function_prototype() {
			return getRuleContexts(Function_prototypeContext.class);
		}
		public Function_prototypeContext function_prototype(int i) {
			return getRuleContext(Function_prototypeContext.class,i);
		}
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public List<Declaration_statementContext> declaration_statement() {
			return getRuleContexts(Declaration_statementContext.class);
		}
		public Declaration_statementContext declaration_statement(int i) {
			return getRuleContext(Declaration_statementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(GLSLParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(GLSLParser.SEMICOLON, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PD_ERROR) | (1L << PD_PRAGMA) | (1L << PD_VERSION) | (1L << PD_LINE) | (1L << PD_EXTENSION) | (1L << KW_STRUCT) | (1L << KW_VOID) | (1L << Q_PRECISION) | (1L << Q_LAYOUT) | (1L << Q_PRECISE) | (1L << Q_INVARIANT) | (1L << Q_SUBROUTINE) | (1L << Q_SMOOTH) | (1L << Q_FLAT) | (1L << Q_NONPERSPECTIVE) | (1L << Q_CONST) | (1L << Q_IN) | (1L << Q_OUT) | (1L << Q_CENTROID) | (1L << Q_PATCH) | (1L << Q_SAMPLE) | (1L << Q_UNIFORM) | (1L << Q_BUFFER) | (1L << Q_VARYING) | (1L << Q_ATTRIBUTE) | (1L << Q_COHERENT) | (1L << Q_VOLATILE) | (1L << Q_RESTRICT) | (1L << Q_READONLY) | (1L << Q_WRIREONLY) | (1L << Q_SHARED) | (1L << Q_HIGHP) | (1L << Q_MEDIUMP) | (1L << Q_LOWP) | (1L << TYPE))) != 0) || _la==IDENTIFIER || _la==SEMICOLON) {
				{
				setState(125);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(120);
					macro();
					}
					break;
				case 2:
					{
					setState(121);
					function_prototype();
					}
					break;
				case 3:
					{
					setState(122);
					function_definition();
					}
					break;
				case 4:
					{
					setState(123);
					declaration_statement();
					}
					break;
				case 5:
					{
					setState(124);
					match(SEMICOLON);
					}
					break;
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroContext extends ParserRuleContext {
		public TerminalNode NEW_LINE() { return getToken(GLSLParser.NEW_LINE, 0); }
		public TerminalNode EOF() { return getToken(GLSLParser.EOF, 0); }
		public M_versionContext m_version() {
			return getRuleContext(M_versionContext.class,0);
		}
		public M_lineContext m_line() {
			return getRuleContext(M_lineContext.class,0);
		}
		public M_pragmaContext m_pragma() {
			return getRuleContext(M_pragmaContext.class,0);
		}
		public M_extensionContext m_extension() {
			return getRuleContext(M_extensionContext.class,0);
		}
		public M_errorContext m_error() {
			return getRuleContext(M_errorContext.class,0);
		}
		public MacroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterMacro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitMacro(this);
		}
	}

	public final MacroContext macro() throws RecognitionException {
		MacroContext _localctx = new MacroContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_macro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PD_VERSION:
				{
				setState(130);
				m_version();
				}
				break;
			case PD_LINE:
				{
				setState(131);
				m_line();
				}
				break;
			case PD_PRAGMA:
				{
				setState(132);
				m_pragma();
				}
				break;
			case PD_EXTENSION:
				{
				setState(133);
				m_extension();
				}
				break;
			case PD_ERROR:
				{
				setState(134);
				m_error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(137);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NEW_LINE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class M_versionContext extends ParserRuleContext {
		public TerminalNode PD_VERSION() { return getToken(GLSLParser.PD_VERSION, 0); }
		public TerminalNode INT_LITERAL() { return getToken(GLSLParser.INT_LITERAL, 0); }
		public TerminalNode PDA_VERSION_PROFILE() { return getToken(GLSLParser.PDA_VERSION_PROFILE, 0); }
		public M_versionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_m_version; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterM_version(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitM_version(this);
		}
	}

	public final M_versionContext m_version() throws RecognitionException {
		M_versionContext _localctx = new M_versionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_m_version);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(PD_VERSION);
			setState(140);
			match(INT_LITERAL);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PDA_VERSION_PROFILE) {
				{
				setState(141);
				match(PDA_VERSION_PROFILE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class M_lineContext extends ParserRuleContext {
		public TerminalNode PD_LINE() { return getToken(GLSLParser.PD_LINE, 0); }
		public List<TerminalNode> INT_LITERAL() { return getTokens(GLSLParser.INT_LITERAL); }
		public TerminalNode INT_LITERAL(int i) {
			return getToken(GLSLParser.INT_LITERAL, i);
		}
		public M_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_m_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterM_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitM_line(this);
		}
	}

	public final M_lineContext m_line() throws RecognitionException {
		M_lineContext _localctx = new M_lineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_m_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(PD_LINE);
			setState(145);
			match(INT_LITERAL);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INT_LITERAL) {
				{
				setState(146);
				match(INT_LITERAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class M_pragmaContext extends ParserRuleContext {
		public TerminalNode PD_PRAGMA() { return getToken(GLSLParser.PD_PRAGMA, 0); }
		public TerminalNode PDA_PRAGMA_STDGL() { return getToken(GLSLParser.PDA_PRAGMA_STDGL, 0); }
		public TerminalNode LRB() { return getToken(GLSLParser.LRB, 0); }
		public TerminalNode PDA_PRAGMA_TOGGLE() { return getToken(GLSLParser.PDA_PRAGMA_TOGGLE, 0); }
		public TerminalNode RRB() { return getToken(GLSLParser.RRB, 0); }
		public TerminalNode PDA_PRAGMA_DEBUG() { return getToken(GLSLParser.PDA_PRAGMA_DEBUG, 0); }
		public TerminalNode PDA_PRAGMA_OPTIMIZE() { return getToken(GLSLParser.PDA_PRAGMA_OPTIMIZE, 0); }
		public M_pragmaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_m_pragma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterM_pragma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitM_pragma(this);
		}
	}

	public final M_pragmaContext m_pragma() throws RecognitionException {
		M_pragmaContext _localctx = new M_pragmaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_m_pragma);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(PD_PRAGMA);
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PDA_PRAGMA_DEBUG:
			case PDA_PRAGMA_OPTIMIZE:
				{
				{
				setState(150);
				_la = _input.LA(1);
				if ( !(_la==PDA_PRAGMA_DEBUG || _la==PDA_PRAGMA_OPTIMIZE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(151);
				match(LRB);
				setState(152);
				match(PDA_PRAGMA_TOGGLE);
				setState(153);
				match(RRB);
				}
				}
				break;
			case PDA_PRAGMA_STDGL:
				{
				setState(154);
				match(PDA_PRAGMA_STDGL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class M_extensionContext extends ParserRuleContext {
		public TerminalNode PD_EXTENSION() { return getToken(GLSLParser.PD_EXTENSION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(GLSLParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(GLSLParser.COLON, 0); }
		public TerminalNode PDA_EXTENSION_BEHAVIOUR() { return getToken(GLSLParser.PDA_EXTENSION_BEHAVIOUR, 0); }
		public TerminalNode PDA_EXTENSION_ALL() { return getToken(GLSLParser.PDA_EXTENSION_ALL, 0); }
		public TerminalNode PDA_EXTENSION_ALL_BEHAVIOUR() { return getToken(GLSLParser.PDA_EXTENSION_ALL_BEHAVIOUR, 0); }
		public M_extensionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_m_extension; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterM_extension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitM_extension(this);
		}
	}

	public final M_extensionContext m_extension() throws RecognitionException {
		M_extensionContext _localctx = new M_extensionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_m_extension);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(PD_EXTENSION);
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(158);
				match(IDENTIFIER);
				setState(159);
				match(COLON);
				setState(160);
				match(PDA_EXTENSION_BEHAVIOUR);
				}
				break;
			case PDA_EXTENSION_ALL:
				{
				setState(161);
				match(PDA_EXTENSION_ALL);
				setState(162);
				match(COLON);
				setState(163);
				match(PDA_EXTENSION_ALL_BEHAVIOUR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class M_errorContext extends ParserRuleContext {
		public TerminalNode PD_ERROR() { return getToken(GLSLParser.PD_ERROR, 0); }
		public M_errorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_m_error; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterM_error(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitM_error(this);
		}
	}

	public final M_errorContext m_error() throws RecognitionException {
		M_errorContext _localctx = new M_errorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_m_error);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(PD_ERROR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
